adding items rest http calls
